k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app-service
  labels:
    app: go-web-app
spec:
  type: ClusterIP
  selector:
    app: go-web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
